# EmbeddedPersistentQueue

./: .gitmodules  CMakeLists.txt  buil_deps.sh  init.sh  run.sh
inc/: queuefactory.h
priv/: log.h  queue.h  time_utils.h
src/: queue.cpp
test/: main.cpp
